# rust-service-template

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs  openapi.rs  state.rs
crates/app/tests/: account_me_e2e.rs  api_router.rs  auth_e2e.rs  cid_lineage_e2e.rs  e2e.rs  hardening_layers.rs  merged_router.rs  notification_e2e.rs  rate_limit.rs
crates/domain-account/: Cargo.toml
crates/domain-account/src/: domain.rs  lib.rs  models.rs  openapi.rs
crates/domain-account/src/ports/: events.rs  http.rs  mod.rs  postgres.rs  repository.rs
crates/domain-account/tests/: http.rs  repository.rs  subscriber.rs
crates/domain-account/tests/fixtures/: test_pub.pem
crates/domain-auth/: Cargo.toml
crates/domain-auth/src/: domain.rs  lib.rs  models.rs  openapi.rs
crates/domain-auth/src/auth/: cookie.rs  jwt.rs  mfa_crypto.rs  mod.rs  password.rs  recovery.rs  totp.rs
crates/domain-auth/src/ports/: dto.rs  http.rs  mod.rs  postgres.rs  repository.rs  revocation.rs
crates/domain-auth/tests/: admin.rs  http.rs  mfa.rs  mfa_repo.rs  refresh_logout.rs  repository.rs  revocation.rs  scopes.rs
crates/domain-auth/tests/fixtures/: test_priv.pem
crates/domain-notification/: Cargo.toml
crates/domain-notification/src/: lib.rs  models.rs  openapi.rs
crates/domain-notification/src/ports/: events.rs  http.rs  mod.rs  notifier.rs  postgres.rs  repository.rs  templates.rs
crates/domain-notification/src/templates/: welcome.txt.hbs
crates/domain-notification/tests/: http.rs  repository.rs  subscriber.rs
crates/domain-notification/tests/fixtures/: test_pub.pem
crates/platform/: Cargo.toml
crates/platform/src/: auth.rs  config.rs  db.rs  http_client.rs  lib.rs  metrics.rs  observability.rs  server.rs
crates/platform/src/auth/: mod.rs  revocation.rs
crates/platform/src/events/: dispatcher.rs  dlq.rs  dlq_http.rs  mod.rs  publisher.rs  types.rs
crates/platform/tests/: cid_middleware.rs  db_pool.rs  dlq_http.rs  outbox_claim.rs  outbox_dispatch.rs  outbox_dlq.rs  outbox_loop.rs  outbox_publish.rs  outbox_reaper.rs  outbox_shutdown.rs  outbox_subscriber.rs
crates/platform/tests/fixtures/: test_pub.pem
docs/superpowers/plans/: 2026-06-24-rust-spec1a-workspace-and-platform.md  2026-06-24-rust-spec1b-outbox-events.md  2026-06-24-rust-spec1c-account-domain-and-app.md  2026-06-25-cid-a-backend.md  2026-06-25-cid-b-frontend.md  2026-06-25-rust-spec2a-auth-core.md  2026-06-25-rust-spec2b-refresh-logout-revocation.md  2026-06-25-rust-spec2c-admin-scopes.md  2026-06-25-rust-spec3a-backend-prereqs.md  2026-06-25-rust-spec4-domain-notification.md  2026-06-25-utoipa-a-backend.md  2026-06-25-utoipa-b-frontend.md  2026-06-25-web-spec3b-spa-foundation.md  2026-06-25-web-spec3c-admin.md  2026-06-30-runtime-hardening.md  2026-06-30-scalable-outbox-dispatcher.md  2026-07-01-build-and-ship.md  2026-07-07-mfa-backend.md  2026-07-10-mfa-spa.md  2026-07-12-notifications-admin-page.md  2026-07-12-refresh-token-cookie.md
docs/superpowers/specs/: 2026-06-24-rust-service-template-design.md  2026-06-25-correlation-id-logging-design.md  2026-06-25-domain-auth-design.md  2026-06-25-domain-notification-design.md  2026-06-25-openapi-typed-client-design.md  2026-06-25-web-spa-design.md  2026-06-30-runtime-hardening-design.md  2026-06-30-scalable-outbox-dispatcher-design.md  2026-07-01-build-and-ship-design.md  2026-07-07-mfa-backend-design.md  2026-07-10-mfa-spa-design.md  2026-07-12-account-recovery-design.md  2026-07-12-notifications-admin-page-design.md  2026-07-12-production-secrets-design.md  2026-07-12-refresh-token-cookie-design.md
infra/: prometheus.yml
migrations/: 0001_outbox.sql  0002_account.sql  0003_auth_user.sql  0004_refresh_revocation.sql  0005_seed_scopes.sql  0006_notification.sql  0007_mfa.sql  0008_notification_subject.sql
scripts/: new-domain.sh
web/: .gitignore  .npmrc  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: accounts.ts  auth.ts  dlq.ts  hooks.ts  mfa.ts  notifications.ts  schema.d.ts  types.ts  users.ts
web/src/auth/: AuthProvider.test.tsx  AuthProvider.tsx  guards.tsx  tokenStore.ts
web/src/components/: AppLayout.tsx
web/src/components/mfa/: MfaCodeInput.tsx  MfaEnrollWizard.tsx  RecoveryCodesDialog.test.tsx  RecoveryCodesDialog.tsx
web/src/components/ui/: card.tsx  sonner.tsx
web/src/lib/: cid.ts  errors.test.ts  errors.ts  fetchClient.test.ts  fetchClient.ts  jwt.test.ts  jwt.ts  queryClient.ts
web/src/routes/: AccountPage.test.tsx  AccountPage.tsx  LoginPage.test.tsx  LoginPage.tsx  RegisterPage.tsx
web/src/routes/admin/: DlqPage.tsx  EditScopesDialog.tsx  NotificationsPage.test.tsx  NotificationsPage.tsx  ResetMfaDialog.tsx  UsersPage.test.tsx  UsersPage.tsx
web/src/test/: polyfills.ts  setup.ts
