[workspace]
resolver = "2"
members = ["crates/platform", "crates/domain-account", "crates/domain-auth", "crates/app", "crates/domain-notification"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid", "json", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
prometheus = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
http = "1"
http-body-util = "0.1"
bcrypt = "0.16"
dotenvy = "0.15"
handlebars = "6"
