[package]
name = "app"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
platform = { path = "../platform" }
domain-account = { path = "../domain-account" }
domain-auth = { path = "../domain-auth" }
domain-notification = { path = "../domain-notification" }
tokio.workspace = true
axum.workspace = true
tower-http = { workspace = true }
tracing.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
domain-account = { path = "../domain-account" }
domain-auth = { path = "../domain-auth" }
domain-notification = { path = "../domain-notification" }
platform = { path = "../platform" }
sqlx.workspace = true
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true
http.workspace = true
axum.workspace = true
http-body-util = { workspace = true }
