[package]
name = "domain-notification"
edition.workspace = true
version.workspace = true

[dependencies]
platform = { path = "../platform" }
axum.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
http.workspace = true
handlebars.workspace = true
utoipa.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
