[package]
name = "platform"
edition.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
prometheus.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
http.workspace = true
utoipa.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
